<resources>
    <string name="app_name">StoryAppDicoding</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_a_new_account_yet">Belum punya akun? Daftar baru</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_less_than_6">Password less than 6</string>
    <string name="registration">Registration</string>
    <string name="show_password">Show Password</string>
</resources>