<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".ui.registration.RegistrationActivity">

    <com.ikrima.practice.dicoding.storyappdicoding.views.MyEditText
        android:id="@+id/ed_register_name"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.ikrima.practice.dicoding.storyappdicoding.views.MyEmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <com.ikrima.practice.dicoding.storyappdicoding.views.MyPasswordEditText
        android:id="@+id/ed_register_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>

    <CheckBox
        android:id="@+id/cb_show_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        />

    <ProgressBar
        android:id="@+id/progress_bar_registration"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_registration"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>